<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context="com.example.juanpablo.login.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            app:srcCompat="@drawable/icon_login" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo_login"
        android:textColor="@color/colorTipografia"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.103"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/txtUser"
        android:layout_alignStart="@+id/txtUser"
        android:layout_marginLeft="11dp"
        android:layout_marginStart="11dp"
        android:layout_marginTop="51dp" />

    <EditText
        android:id="@+id/txtUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_user"
        android:inputType="textPersonName"
        android:textColor="@color/colorTipografia"
        android:textColorHint="@color/colorTipografia"
        tools:layout_editor_absoluteX="85dp"
        tools:layout_editor_absoluteY="251dp"
        android:layout_above="@+id/txtPass"
        android:layout_alignLeft="@+id/txtPass"
        android:layout_alignStart="@+id/txtPass"
        android:layout_marginBottom="49dp" />

    <EditText
        android:id="@+id/txtPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_user_pass"
        android:inputType="textPassword"
        android:textColor="@color/colorTipografia"
        android:textColorHint="@color/colorTipografia"
        tools:layout_editor_absoluteX="85dp"
        tools:layout_editor_absoluteY="316dp"
        android:layout_marginBottom="64dp"
        android:layout_above="@+id/btnIngresar"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/btnIngresar"
        android:layout_width="379dp"
        android:layout_height="49dp"
        android:text="@string/btn_login"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="5dp"
        tools:layout_editor_absoluteY="462dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
